--- a/sites/all/themes/wttoc/sass/components/componentsElements.scss
+++ b/sites/all/themes/wttoc/sass/components/componentsElements.scss
@@ -57,4 +57,64 @@ fieldset{
 	@include clearboth;
 }
 
+/*
+ * Unslider
+ */
+.view-image-slider .views-field-field-image-gallery .field-content { 
+	position: relative;
+	width: 100%;
+	height: 200px !important;
+	overflow: auto;
+	font-size: $fontS * 10px;
+	line-height: $fontM * 10px;
+	text-align: center;
+	color: rgba(255,255,255,.6);
+	text-shadow: 0 0 1px rgba(0,0,0,.05), 0 1px 2px rgba(0,0,0,.3);
+	background: $DARKGRAY;
+	box-shadow: 0 1px 2px rgba(0,0,0,.25);
+	li{
+		list-style:none;
+	}
+	ul li{
+		float:left;
+		img{
+			height:200px !important;
+			width:100% !important;
+		}
+		@include clearfix;
+	}
+	ol.dots{
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 20px;
+		.dot{
+			-webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+			-moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+			-ms-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+			-o-filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+			filter: drop-shadow(0 1px 2px rgba(0,0,0,.3));
+		}
+		li{
+			&.active{
+				background: #fff;
+				opacity: 1;
+			}
+			display: inline-block;
+			width: 10px;
+			height: 10px;
+			margin: 0 4px;
+			text-indent: -999em;
+			border: 2px solid #fff;
+			border-radius: 6px;
+			cursor: pointer;
+			opacity: .4;
+			-webkit-transition: background .5s, opacity .5s;
+			-moz-transition: background .5s, opacity .5s;
+			transition: background .5s, opacity .5s;
+		}	
+	}
+}
+
+
 
