--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -10,8 +10,19 @@
 .icon-yahoo:before { content: '\e808'; } /* '' */
 .icon-reddit:before { content: '\e809'; } /* '' */
 .icon-slideshare:before { content: '\e80a'; } /* '' */
+.icon-edit:before { content: '\e80b'; } /* '' */
 .icon-facebook:before { content: '\e80c'; } /* '' */
 .icon-delicious:before { content: '\e80d'; } /* '' */
 .icon-digg:before { content: '\e80e'; } /* '' */
 .icon-stumbleupon:before { content: '\e80f'; } /* '' */
 .icon-gplus:before { content: '\e810'; } /* '' */
+.icon-clock:before { content: '\e811'; } /* '' */
+.icon-dollar:before { content: '\e812'; } /* '' */
+.icon-lightbulb:before { content: '\e813'; } /* '' */
+.icon-basket:before { content: '\e814'; } /* '' */
+.icon-tag:before { content: '\e815'; } /* '' */
+.icon-location:before { content: '\e816'; } /* '' */
+.icon-picture:before { content: '\e817'; } /* '' */
+.icon-map:before { content: '\e818'; } /* '' */
+.icon-article-alt:before { content: '\e819'; } /* '' */
+.icon-spread:before { content: '\e81a'; } /* '' */
