--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?43048145');
-  src: url('../font/fontello.eot?43048145#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?43048145') format('woff'),
-       url('../font/fontello.ttf?43048145') format('truetype'),
-       url('../font/fontello.svg?43048145#fontello') format('svg');
+  src: url('../font/fontello.eot?88000565');
+  src: url('../font/fontello.eot?88000565#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?88000565') format('woff'),
+       url('../font/fontello.ttf?88000565') format('truetype'),
+       url('../font/fontello.svg?88000565#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?43048145#fontello') format('svg');
+    src: url('../font/fontello.svg?88000565#fontello') format('svg');
   }
 }
 */
@@ -65,8 +65,19 @@
 .icon-yahoo:before { content: '\e808'; } /* '' */
 .icon-reddit:before { content: '\e809'; } /* '' */
 .icon-slideshare:before { content: '\e80a'; } /* '' */
+.icon-edit:before { content: '\e80b'; } /* '' */
 .icon-facebook:before { content: '\e80c'; } /* '' */
 .icon-delicious:before { content: '\e80d'; } /* '' */
 .icon-digg:before { content: '\e80e'; } /* '' */
 .icon-stumbleupon:before { content: '\e80f'; } /* '' */
 .icon-gplus:before { content: '\e810'; } /* '' */
+.icon-clock:before { content: '\e811'; } /* '' */
+.icon-dollar:before { content: '\e812'; } /* '' */
+.icon-lightbulb:before { content: '\e813'; } /* '' */
+.icon-basket:before { content: '\e814'; } /* '' */
+.icon-tag:before { content: '\e815'; } /* '' */
+.icon-location:before { content: '\e816'; } /* '' */
+.icon-picture:before { content: '\e817'; } /* '' */
+.icon-map:before { content: '\e818'; } /* '' */
+.icon-article-alt:before { content: '\e819'; } /* '' */
+.icon-spread:before { content: '\e81a'; } /* '' */
