--- a/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
+++ b/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
@@ -231,6 +231,11 @@
 	.ui-selectmenu-button span.ui-selectmenu-text{
 		color: $headerTextColor;
 	}
+	//FONTELLO ICONS DEFAULT
+	.view i.icon{
+	    background-color: $color1;
+	    color: $WHITE;
+	}
 }
 
 
