--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -8,6 +8,7 @@
 @import "components/componentsResponsive";
 @import "components/componentsColorings";
 @import "components/componentsElements";
+@import "components/componentsBusinessEventsDisplayView";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
