--- a/sites/all/themes/wttoc/sass/components/componentsElements.scss
+++ b/sites/all/themes/wttoc/sass/components/componentsElements.scss
@@ -74,9 +74,17 @@ fieldset{
 /*
  * Views: Unslider
  */
+//no js fallback adjustments
+.no-js .view-image-slider .views-field-field-image-gallery .field-content ul li{
+	margin:0 auto;
+	width:100%; 
+	img{
+		margin-top:0;
+	}
+}
 .view-image-slider .views-field-field-image-gallery .field-content { 
 	position: relative;
-	width: 100%;
+	width: 130%;
 	height: 200px !important;
 	overflow: auto;
 	font-size: $fontS * 10px;
@@ -92,7 +100,6 @@ fieldset{
 	ul li{
 		float:left;
 		img{
-			height:200px !important;
 			width:100% !important;
 		}
 		@include clearfix;
@@ -131,9 +138,12 @@ fieldset{
 }
 
 /* 
- * Views
+ * Content Type Displays
  */
-.view-business-display{
+.view-business-display, .view-events-display{
+	.views-row{
+		@include clearfix;
+	}
 	.views-field{
 		border-bottom: 1px solid lightgray;
 		padding: 10px 10px;
@@ -143,8 +153,9 @@ fieldset{
 				display:inline-block;
 			}
 			i.icon{
-				font-size: 23px;
-				padding:5px;
+				display:inline-block;
+				font-size: 25px;
+				padding:8px 5px;
 				margin: 9px;
 				margin-left: 0;
 				border-radius:10px;
@@ -154,24 +165,30 @@ fieldset{
 				margin-bottom: 10px;
 			}
 		}
-	}
-	.view-footer{
-		border-bottom: 1px solid lightgray;
-		padding: 10px 10px;
-		margin: 10px 0;
-		h3{
-			display:inline-block;
+		&.views-field-field-address, &.views-field-field-date-of-event, &.views-field-field-website{
+			@include breakpoint($breakpointWideP1){
+				@include chop3Left(33%);
+				border-bottom:0;
+			};
+			@include breakpoint($mobile2Wide){
+				@include splitLeft(50%);
+				border-bottom:0;
+			};
+			@include breakpoint(0 $breakpointMobile){
+				
+			};	
 		}
-		i.icon{
-			font-size: 23px;
-			padding:5px;
-			margin: 9px;
-			margin-left: 0;
-			border-radius:10px;
-		}
-		.wttocFieldEnclose{
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
+		&.views-field-field-website{
+			@include breakpoint($mobile2Wide){
+				clear:both;
+			};
+		}	
 	}
 }
+/*
+ * TabBlocks: Tabs Display
+ */
+.tabJS{
+	@include fontelloBefore;
+}
+
