updated fontello library, added markercluster library

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -26,3 +26,11 @@
 .icon-map:before { content: '\e818'; } /* '' */
 .icon-article-alt:before { content: '\e819'; } /* '' */
 .icon-spread:before { content: '\e81a'; } /* '' */
+.icon-building-filled:before { content: '\e81b'; } /* '' */
+.icon-calendar:before { content: '\e81c'; } /* '' */
+.icon-link-ext:before { content: '\e81d'; } /* '' */
+.icon-th:before { content: '\e81e'; } /* '' */
+.icon-child:before { content: '\e81f'; } /* '' */
+.icon-ellipsis:before { content: '\e820'; } /* '' */
+.icon-list-alt:before { content: '\e821'; } /* '' */
+.icon-plus-outline:before { content: '\e822'; } /* '' */
