--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?88000565');
-  src: url('../font/fontello.eot?88000565#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?88000565') format('woff'),
-       url('../font/fontello.ttf?88000565') format('truetype'),
-       url('../font/fontello.svg?88000565#fontello') format('svg');
+  src: url('../font/fontello.eot?70374814');
+  src: url('../font/fontello.eot?70374814#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?70374814') format('woff'),
+       url('../font/fontello.ttf?70374814') format('truetype'),
+       url('../font/fontello.svg?70374814#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?88000565#fontello') format('svg');
+    src: url('../font/fontello.svg?70374814#fontello') format('svg');
   }
 }
 */
@@ -81,3 +81,11 @@
 .icon-map:before { content: '\e818'; } /* '' */
 .icon-article-alt:before { content: '\e819'; } /* '' */
 .icon-spread:before { content: '\e81a'; } /* '' */
+.icon-building-filled:before { content: '\e81b'; } /* '' */
+.icon-calendar:before { content: '\e81c'; } /* '' */
+.icon-link-ext:before { content: '\e81d'; } /* '' */
+.icon-th:before { content: '\e81e'; } /* '' */
+.icon-child:before { content: '\e81f'; } /* '' */
+.icon-ellipsis:before { content: '\e820'; } /* '' */
+.icon-list-alt:before { content: '\e821'; } /* '' */
+.icon-plus-outline:before { content: '\e822'; } /* '' */
