--- a/sites/all/themes/wttoc/sass/components/Off_Canvas.scss
+++ b/sites/all/themes/wttoc/sass/components/Off_Canvas.scss
@@ -138,14 +138,16 @@
 			margin: 0 auto;
 			@include clearfix;
 			padding-top:3px;
+			text-align:right;
 			//First Level Items
 			> li{
 				position:relative;
-				display:block;
-				float:left;
+				display: inline-block;
+				//display:block;
+				//float:left;
 				> a, > div, > span{
 					color:$DARKGRAY;
-					padding:20px 25px 30px 25px;
+					padding:10px 12px 15px 12px;
 					display:block;
 					border-bottom: 1px solid transparent;
 					margin-bottom: -1px;
