--- a/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
@@ -51,7 +51,7 @@
  */
  .js, .no-js{
 	//General Block
-	.block--views-events-display-block, .block.block--views-business-display-block{
+	.block.block--views-events-display-block, .block.block--views-business-display-block{
 			@include borderRadiusIconbgIcon($color1Light 2px solid, 3px, $color1, $WHITE);
 			.block__title{
 				background-color: $color1;
@@ -59,7 +59,7 @@
 			}
 	}
 	//Details Block
-	.block--views-events-display-block-3, .block.block--views-business-display-block-3{
+	.block.block--views-events-display-block-3, .block.block--views-business-display-block-3{
 			@include borderRadiusIconbgIcon($color2Light 2px solid, 3px, $color2, $WHITE);
 			.block__title{
 				background-color: $color2;
@@ -67,7 +67,7 @@
 			}
 	}
 	//More Info Block
-	.block--views-events-display-block-1, .block.block--views-business-display-block-1{
+	.block.block--views-events-display-block-1, .block.block--views-business-display-block-1{
 			@include borderRadiusIconbgIcon($color3Light 2px solid, 3px, $color3, $WHITE);
 			.block__title{
 				background-color: $color3;
