--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -1,5 +1,6 @@
 @import "bowerimports/cssowl/lib/scss/cssowl";
 @import "bowerimports/compass-breakpoint/stylesheets/_breakpoint";
+@import "bowerimports/sumoselect/sumoselect";
 
 @import "variables/variables";
 @import "abstractions/abstractions";
