--- a/sites/all/themes/wttoc/sass/base/base.scss
+++ b/sites/all/themes/wttoc/sass/base/base.scss
@@ -14,6 +14,9 @@ html {
 	@include breakpoint($breakpointWideP1){
 		font-size: 57.5%;	
 	};
+	input, button{
+		font-family:"Open Sans", sans-serif, Helvetica;
+	}
 }
 
 /*
