--- a/sites/all/themes/wttoc/sass/base/base.scss
+++ b/sites/all/themes/wttoc/sass/base/base.scss
@@ -26,7 +26,13 @@ body{
 	//Do not use REM here
 	font-size:16px;
 }
-
+/*
+ * Max Width Responsive  
+ */
+body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
 /*
  * Admin Menu Margin
  */
