--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -10,8 +10,10 @@
 @import "components/General_Colorings";
 @import "components/General_Elements";
 @import "components/Extras_TabBlocks";
+@import "components/Page_Home.scss";
 @import "components/Views_All_BusinessesAndEvents";
 @import "components/Views_One_BusinessesAndEvents";
+@import "components/Views_Categories_Businesses_Events.scss";
 @import "components/Views_Unslider";
 
 // Import variables, abstractions, base styles and components.
