--- a/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
@@ -4,39 +4,9 @@
  //All results
 .view-id-businesses_and_events.view-display-id-page_results{
 	.view-content{	
+		@include views3Wide1MobileDefault;
 		.views-row{
-			margin-top:5px;
-			margin-bottom:5px;
-			padding-bottom:2px;
-			//Wide Columns
-			@include breakpoint($breakpointWideP1){
-				&:nth-child(3n+1){
-					clear:both;
-					@include chop3VLeft(33.33%);
-				}
-				&:nth-child(3n+2){
-					@include chop3VMiddle(33.33%);
-				}
-				&:nth-child(3n+3){
-					@include chop3VRight(33.33%);
-				}
-			};
-			//Tablet Columns
-			@include breakpoint($mobile2Wide){
-				&:nth-child(2n+1){
-					@include splitVLeft(50%);
-					clear:both;
-				}
-				&:nth-child(2n+2){
-					@include splitVRight(50%);
-				}
-
-			};
-			//Mobile Columns
-			@include breakpoint(0 $breakpointMobile){
-				@include oneColumn(100%);
-			};
-			//Row Styling
+			//Field Row Styling
 			.views-field{
 				position:relative;
 				padding:7px 0;
@@ -63,6 +33,55 @@
 					padding-left:40px;
 				}
 			}
+			.views-field.views-field-type{
+				padding:4px;
+				border-top:0;
+				position:absolute;
+				top:0;
+				right:0;
+				min-width:30px;
+				max-width:30px;
+				min-height:30px;
+				z-index:1;
+				margin:0 0 0 0;
+				border-bottom-left-radius:3px;
+				overflow:hidden;
+				@include backgroundOpacity($color1Light,0.8);
+				@include cssTransition(all 0.35s ease-in-out);
+				&:before{
+					background-color:$WHITE;
+					color:$color1Light;
+				}
+				.field-content{
+					@include accesibleHide;
+					min-width:80px;
+					color:$WHITE;
+					font-weight:bold;
+					margin-top:5px;
+					text-align:center;
+				}
+			}
+			//content type icons
+			&.rowContentType-business-service-or-attraction{
+				.views-field.views-field-type:before{
+					content:'\e81b';
+				}
+			}
+			&.rowContentType-event{
+				.views-field.views-field-type:before{
+					content:'\e81c';
+				}
+			}
+			&:hover{
+				.views-field.views-field-type{
+					max-width:150px;
+					.field-content{
+						@include accesibleUnhide;
+						text-align:center;	
+					}
+				}
+			}
+			//other fields
 			.views-field.views-field-field-image-gallery{
 				@include fontelloBeforeClear;
 				padding:0;
@@ -124,16 +143,23 @@
 }
 
 /* 
- * We have two submission forms on the Businesses & Events Results Page
+ * We have two Views, one as a Block and one as a Page
+ * Only one of each filter/pager should be visible
+ * More at theme's js/wttoc.allBizEvents.js
  */
- 
-//One of the forms is hidden, such that it can still serve as a filter for its results
-//The second one is shown, such that it can trigger the first one. See theme's js/wttoc.syncinputs.js
-.views-exposed-form-businesses-events-page-1{
-	//display:none;
+ //only do this on the page, not everywhere else
+ body.page-search-businesses-and-events{
+	//Hide Views Page Filters
+	#block-views-d400f6dac6873ec2ddd895ba96987fce, form#views-exposed-form-businesses-and-events-page-results{
+		display:none;
+	}
+	//Hide Views Page Pagers - disabled
+	.view-id-businesses_and_events.view-display-id-page_results ul.pager{
+		//display:none;
+	}
 }
-//Hide one of the pagers since it's being controlled by another pager. See theme's js/wttoc.syncinputs.js
-//.view-id-businesses_events.view-display-id-block_2 ul.pager can still be seen
-.view-id-businesses_events.view-display-id-page_1 ul.pager{
-	//display:none;
+//Hide Views Lat Lon Field 
+.view-id-businesses_and_events .views-widget-filter-field_hidden_address_geofield_latlon_1, 
+form#views-exposed-form-businesses-and-events-page-results .views-widget-filter-field_hidden_address_geofield_latlon_1{
+	display:none;
 }
