temporary commit in theme

--- a/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_All_BusinessesAndEvents.scss
@@ -151,7 +151,7 @@
  body.page-search-businesses-and-events{
 	//Hide Views Page Filters
 	#block-views-d400f6dac6873ec2ddd895ba96987fce, form#views-exposed-form-businesses-and-events-page-results{
-		display:none;
+	//	display:none;
 	}
 	//Hide Views Page Pagers - disabled
 	.view-id-businesses_and_events.view-display-id-page_results ul.pager{
@@ -161,5 +161,5 @@
 //Hide Views Lat Lon Field 
 .view-id-businesses_and_events .views-widget-filter-field_hidden_address_geofield_latlon_1, 
 form#views-exposed-form-businesses-and-events-page-results .views-widget-filter-field_hidden_address_geofield_latlon_1{
-	display:none;
+	//display:none;
 }
