--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -1229,6 +1229,8 @@ body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-res
   body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form {
     text-align: left;
     display: inline-block; }
+    body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form .views-exposed-widget .form-submit {
+      margin-top: 0; }
 
 /*
  * Business & Events Displays
@@ -1431,13 +1433,6 @@ body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-res
  * Only one of each filter/pager should be visible
  * More at theme's js/wttoc.allBizEvents.js
  */
-body.page-search-businesses-and-events #block-views-d400f6dac6873ec2ddd895ba96987fce, body.page-search-businesses-and-events form#views-exposed-form-businesses-and-events-page-results {
-  display: none; }
-
-.view-id-businesses_and_events .views-widget-filter-field_hidden_address_geofield_latlon_1,
-form#views-exposed-form-businesses-and-events-page-results .views-widget-filter-field_hidden_address_geofield_latlon_1 {
-  display: none; }
-
 /* 
  * Content Type Displays
  */
